Moved permalink into date

--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -1,12 +1,14 @@
 {{"<!-- begin micrometadata partial //-->" | safeHTML}}
 <div class="meta">
-		<time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05" }}">
-		{{ .Date.Format "02/01/06 15:04" }}</time>&nbsp;&bull;&nbsp;
-		<a href="{{ .Permalink }}" class="metatag u-url u-uid">
-			<svg class="icon">
-				<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
-				</use>
-			</svg>Permalink</a>&nbsp;&bull;&nbsp;
+		<a href="{{ .Permalink }}" class="metatag u-url u-uid"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05" }}">
+		{{ .Date.Format "02/01/06 15:04" }}</time></a>&nbsp;&bull;&nbsp;
+			<span rel="author" class="p-author h-card">
+				<a href="{{ .Site.BaseURL }}page/about" class="metatag" title="Daniel Goldsmith">	<svg class="icon">
+						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
+						</use> 
+					</svg>
+				</a>
+			</span>&nbsp;&bull;&nbsp;
 			{{ if isset .Params "mf-syndication" }}
 				<a href={{ index .Params "mf-syndication" }} class="metatag" title="syndicated to instagram">
 					<svg class="icon icon-instagram">
