fixed sidebar -- thanks @jws

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -22,7 +22,7 @@
                      </svg> <span class="hidden">micro</span></a>
                 </li>
 				{{- end }}
-                <li><a href="{{ .Site.BaseURL }}article" title="reviews" class="metatag">
+                <li><a href="{{ .Site.BaseURL }}article" title="articles" class="metatag">
                     <svg class="icon icon-blog">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-blog">
                          </use>
@@ -34,7 +34,7 @@
                          </use>
                      </svg> <span class="hidden">reviews</span></a>
                 </li>
-                <li><a href="{{ .Site.BaseURL }}link" title="reviews" class="metatag">
+                <li><a href="{{ .Site.BaseURL }}link" title="links" class="metatag">
                     <svg class="icon icon-link">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-link">
                          </use>
