added pgp to the header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,6 +27,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="mask-icon" href="/ascraeus_icon.svg" color="#367588" />
     <link rel="me" href="mailto:dgold@ascraeus.org" />
+    <link rel="pgpkey" href="/pgp_key.txt" />
     <link rel="author" href="/pages/about/" title="About the author" />
     <meta name="theme-color" content="#f5f5f5">
 
