--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -113,7 +113,7 @@
                 </li>
                 {{- end }}
                 {{- if .Site.Author.keybase }}
-                <li><a href="https://keybas.io/{{ .Site.Author.keybase}}" rel="me" title="keybase" class="metatag">
+                <li><a href="https://keybase.io/{{ .Site.Author.keybase}}" rel="me" title="keybase" class="metatag">
                     <svg class="icon icon-key">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-key">
                          </use>
