--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -35,10 +35,16 @@
                      </svg> <span class="hidden">reviews</span></a>
                 </li>
                 <li><a href="{{ .Site.BaseURL }}page/tbr-list" title="tbr-list" class="metatag">
+                    <svg class="icon icon-infinite">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-infinite">
+                         </use>
+                     </svg> <span class="hidden">tbr-list</span></a>
+                </li>
+                <li><a href="{{ .Site.BaseURL }}page/reading" title="reading" class="metatag">
                     <svg class="icon icon-book">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-book">
                          </use>
-                     </svg> <span class="hidden">tbr-list</span></a>
+                     </svg> <span class="hidden">reading</span></a>
                 </li>
                 <li><a href="{{ .Site.BaseURL }}link" title="links" class="metatag">
                     <svg class="icon icon-link">
