Three fixes for this release
1. Fixed the div handling of the current reading
2. Fixed the height issues on current reading on mobile devices
3. Fixed the errant link to reading page.

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -34,11 +34,11 @@
                          </use>
                      </svg> <span class="hidden">reviews</span></a>
                 </li>
-                <li><a href="{{ .Site.BaseURL }}page/tbr-list" title="tbr-list" class="metatag">
+                <li><a href="{{ .Site.BaseURL }}page/tbr" title="tbr" class="metatag">
                     <svg class="icon icon-infinite">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-infinite">
                          </use>
-                     </svg> <span class="hidden">tbr-list</span></a>
+                     </svg> <span class="hidden">tbr</span></a>
                 </li>
                 <li><a href="{{ .Site.BaseURL }}page/reading" title="reading" class="metatag">
                     <svg class="icon icon-book">
