Move to Cormorant Garamond

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,7 +34,7 @@
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <!--  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/normalize.css"> -->
-  <link href="https://fonts.googleapis.com/css?family=Gentium+Basic:400,400i|Open+Sans:400,600,800" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i|Open+Sans:400,600,800" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/webmention.css" />
