Libre Franklin too

--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -154,7 +154,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
 	color: #181818;
-	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-family: 'Libre Franklin', Helvetica, Arial, sans-serif;
 }
 
 h1 {
@@ -329,7 +329,7 @@ div.tbr-item {
   position: relative;
   overflow: hidden;
   width: 100%;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Libre Franklin", sans-serif;
 }
 .cssProgress .cssProgress-bar {
   display: block;
@@ -592,7 +592,7 @@ a.metatag:visited:hover {
 
 .lipag a {
 	text-decoration: none !important;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Libre Franklin', sans-serif;
 	color: whitesmoke;
 	-webkit-transition: background-color 0.5s;
 	-moz-transition: background-color 0.5s;
@@ -602,7 +602,7 @@ a.metatag:visited:hover {
 
 .lipag a:hover {
 	text-decoration: none !important;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Libre Franklin', sans-serif;
 	color: #367588;
 	background-color: whitesmoke;
 	-webkit-transition: background-color 0.5s;
@@ -617,7 +617,7 @@ li.active a {
 
 a[rel="next"], a[rel="prev"] {
 	text-decoration: none !important;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Libre Franklin', sans-serif;
 	color: whitesmoke;
 	line-height: 1;
 	padding: 0.2em 0.5em 0.2em;
@@ -630,7 +630,7 @@ a[rel="next"], a[rel="prev"] {
 
 a:hover[rel="next"], a:hover[rel="prev"] {
 	text-decoration: none !important;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Libre Franklin', sans-serif;
 	color: #367588;
 	background-color: whitesmoke;
 	padding: 0.2em 0.5em 0.2em;
