--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -145,7 +145,7 @@ body {
 	font-size: 1em;
   	line-height: 1.27777778em;
  	margin: auto;
- 	color: #454552;
+ 	color: #16161d;
 }
 
 #sitetitle h1, article h2 a {
