--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -141,7 +141,7 @@ html {
 }
 
 body {
-    font-family: "Cormorant Garamond", Times, Georgia, serif;
+    font-family: "Lora", Times, Georgia, serif;
 	font-size: 1em;
   	line-height: 1.27777778em;
  	margin: auto;
@@ -242,7 +242,7 @@ pre {
 
 div.meta {
 	font-size: 75%;
-	font-family: 'Cormorant Garamond', Georgia, serif;
+	font-family: 'Lora', Georgia, serif;
 	font-style: italic;
 	color: #999;
 }
@@ -380,7 +380,7 @@ div.tbr-item {
 }
 
 nav li {
-	font-family: 'Cormorant Garamond', Georgia, serif;
+	font-family: 'Lora', Georgia, serif;
 	font-style: italic;
 	color: #999;
 }
