--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -136,14 +136,14 @@ footer {
 
 html {
 	font-size: 18px;
-  	line-height: 23px;
+  	line-height: 29px;
   	background-color: whitesmoke;
 }
 
 body {
     font-family: "Lora", Times, Georgia, serif;
 	font-size: 1em;
-  	line-height: 1.27777778em;
+  	line-height: 1.6111em;
  	margin: auto;
  	color: #16161d;
 }
@@ -846,6 +846,10 @@ th, tfoot {
 		-webkit-transition: color 0.2s;
 		-moz-transition: color 0.2s;
 		transition: color 0.2s;
+	}
+
+	article {
+		padding: 1em;
 	}
 
 
