smaller, tidier sidebar

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,83 @@
 		</section>
 	</main>
 	<footer>
+	<div class="footernav">
+			<ul>
+				{{- if .Site.Author.twitter }}
+				<li><a href="https://twitter.com/{{ .Site.Author.twitter }}" rel="me" title="twitter" class="metatag">
+					<svg class="icon icon-twitter">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-twitter">
+                         </use>
+                     </svg></a>
+                </li>
+				{{- end }}
+				{{- if .Site.Author.google_plus }}
+				<li><a href="https://google.com/+{{ .Site.Author.google_plus }}" rel="me" title="google+" class="metatag">
+					<svg class="icon icon-google-plus">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-google-plus">
+                         </use>
+                     </svg></a>
+                </li>
+				{{- end }}         
+				{{- if .Site.Author.github }}
+				<li><a href="https://github.com/{{ .Site.Author.github }}" rel="me" title="github" class="metatag">
+					<svg class="icon icon-github">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-github">
+                         </use>
+                     </svg></a>
+                </li>
+				{{- end }}
+				{{- if .Site.Author.instagram }}
+				<li><a href="https://instagram.com/{{ .Site.Author.instagram }}" rel="me" title="instagram" class="metatag">
+					<svg class="icon icon-instagram">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-instagram">
+                         </use>
+                     </svg></a>
+                </li>
+				{{- end }}
+				{{- if .Site.Author.facebook }}
+				<li><a href="https://facebook.com/{{ .Site.Author.facebook }}" rel="me" title="facebook" class="metatag">
+					<svg class="icon icon-facebook">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-facebook">
+                         </use>
+                     </svg></a>
+                </li>
+				{{- end }}
+				{{- if .Site.Author.linkedin }}
+				<li><a href="https://linkedin.com/in/{{ .Site.Author.linkedin }}" rel="me" title="linkedin" class="metatag">
+					<svg class="icon icon-linkedin">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-linkedin">
+                         </use>
+                     </svg></a>
+                </li>
+				{{- end }}
+				{{- if .Site.Author.flickr }}
+				<li><a href="https://flickr.com/{{ .Site.Author.flickr}}" rel="me" title="flickr" class="metatag">
+					<svg class="icon icon-flickr">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-flickr">
+                         </use>
+                     </svg></a>
+                </li>
+				{{- end }}
+				{{- if .Site.Author.tumblr }}
+				<li><a href="https://{{ .Site.Author.tumblr }}.tumblr.com" rel="me" title="tumblr" class="metatag">
+					<svg class="icon icon-tumblr2">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-tumblr2">
+                         </use>
+                     </svg></a>
+                </li>
+                {{- end }}
+                {{- if .Site.Author.keybase }}
+                <li><a href="https://keybase.io/{{ .Site.Author.keybase}}" rel="me" title="keybase" class="metatag">
+                    <svg class="icon icon-key">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-key">
+                         </use>
+                     </svg></a>
+                </li>
+                {{- end }}
+        </ul>
+    </div>
+    
 		<p class="feet h-card vcard">{{ .Site.Title }} &copy; <a href={{ .Site.BaseURL }} class="p-name u-url url author metatag" rel="me">{{ .Site.Author.name }}</a><img src="{{ .Site.BaseURL }}pictures/marvin.png" class="u-photo" style="display: none"> <a class="p-nickname u-email email metatag" rel="me" href="mailto:dgold@ascraeus.org">{{ .Site.Author.nick }}</a> 2011-{{ .Now.Format "2006" }} &bull; Licenced under <a href="{{ .Site.BaseURL }}page/licence" class="metatag">CC-BY-NC-SA</a> </p>
 	</footer>
 </body>
