styling footer icons

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,14 +8,14 @@
 					<svg class="icon icon-twitter">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-twitter">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
 				{{- end }}
 				{{- if .Site.Author.google_plus }}
 				<a href="https://google.com/+{{ .Site.Author.google_plus }}" rel="me" title="google+" class="metatag">
 					<svg class="icon icon-google-plus">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-google-plus">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 
 				{{- end }}         
 				{{- if .Site.Author.github }}
@@ -23,7 +23,7 @@
 					<svg class="icon icon-github">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-github">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 
 				{{- end }}
 				{{- if .Site.Author.instagram }}
@@ -31,7 +31,7 @@
 					<svg class="icon icon-instagram">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-instagram">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 
 				{{- end }}
 				{{- if .Site.Author.facebook }}
@@ -39,7 +39,7 @@
 					<svg class="icon icon-facebook">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-facebook">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 
 				{{- end }}
 				{{- if .Site.Author.linkedin }}
@@ -47,7 +47,7 @@
 					<svg class="icon icon-linkedin">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-linkedin">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 
 				{{- end }}
 				{{- if .Site.Author.flickr }}
@@ -55,7 +55,7 @@
 					<svg class="icon icon-flickr">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-flickr">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 
 				{{- end }}
 				{{- if .Site.Author.tumblr }}
@@ -63,7 +63,7 @@
 					<svg class="icon icon-tumblr2">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-tumblr2">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 
                 {{- end }}
                 {{- if .Site.Author.keybase }}
@@ -71,7 +71,7 @@
                     <svg class="icon icon-key">
                          <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-key">
                          </use>
-                     </svg></a>&nbsp;&bull;&nbsp;
+                     </svg></a>
                 {{- end }}
             </div>
 
