--- a/static/css/reproach.css
+++ b/static/css/reproach.css
@@ -90,7 +90,7 @@ html {
 }
 
 body {
-    font-family: "Lora", Times, Georgia, serif;
+    font-family: 'Lora', Times, Georgia, serif;
 	font-size: 1em;
   	line-height: 1.6111em;
  	margin: auto;
