--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -18,6 +18,14 @@
 					</svg>
 				</a>&nbsp;&bull;&nbsp;
 			{{- end }}
+			{{- if .Params.masto }}
+				<a href="{{ .Params.masto }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to mastodon">
+					<svg class="icon icon-masto">
+						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-masto">
+						</use>
+					</svg>
+				</a>&nbsp;&bull;&nbsp;
+			{{- end }}
 				<span rel="author" class="p-author h-card">
 				<a href="{{ .Site.BaseURL }}page/about" class="metatag" title="Daniel Goldsmith">	<svg class="icon">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
