--- a/layouts/partials/twittergraph.html
+++ b/layouts/partials/twittergraph.html
@@ -5,7 +5,11 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:url" content="{{ .Permalink }}" />
     <meta name="twitter:title" content="{{ .Title }}" />
+    {{- if .Params.summary }}
     <meta name="twitter:description" content="{{ .Params.summary }}" />
+    {{- else }}
+     <meta name="twitter:description" content="{{ .Summary }}" />
+    {{- end }}
     <meta name="twitter:site" content="@AscraeusOrg" />
     <meta name="twitter:creator" content="@_dgoldsmith" />
     {{- if .Params.image }}
@@ -16,7 +20,11 @@
     ================================================== -->
     <meta property="og:title" content="{{ .Title }}" />
     <meta property="og:type" content="article" />
+    {{- if .Params.summary }}
     <meta property="og:description" content="{{ .Params.summary }}" />
+    {{- else }}
+    <meta property="og:description" content="{{ .Summary }}" />
+    {{- end }}
     <meta property="og:url" content="{{ .Permalink }}" />
     <meta property="og:site_name" content="View from Ascraeus" />
     {{- if .Params.image }}
