--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -59,6 +59,12 @@
                          </use>
                      </svg> 				
                 <span class="hidden"> rss feed</a></li>
+                <li><a href="{{ .Site.BaseURL }}jsonfeed/index.json" title="jsonfeed" class="metatag">
+                    <svg class="icon icon-jsonfeed">
+                         <use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-jsonfeed">
+                         </use>
+                     </svg>
+                <span class="hidden"> jsonfeed</a></li>
 				</ul>			
                     <form method="get" class="hidden" id="search" action="https://duckduckgo.com/">
                         <input type="hidden" name="sites" value="ascraeus.org" />
