attempting to fix some of the issues with microformats

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,8 @@
                             </use>
                         </svg>{{ .Title }}</a></h3>
 			{{- else if not .Title }}
-				<div class="indmicro">
+			<div class="indmicro">
+				<article class="h-entry hentry">
 			{{- else }}
 			<article class="h-entry hentry">
 		    	<h3 class="p-name entry-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
@@ -27,7 +28,6 @@
 			{{ else }}
 		    {{ .Content }}
 		    	</div>
-		    	</article>
 		    {{ end }}
 		    {{- if not .Title }}
 				{{ partial "micrometadata.html" . }}
