--- a/layouts/micro/micropubpost.html
+++ b/layouts/micro/micropubpost.html
@@ -10,7 +10,7 @@
 
 	{{ partial "articlepagination.html" . }}
 	{{ partial "mention.html" . }}
-	{{- partial "webmention.html" }}
+	{{ partial "webmention.html" }}
 	</content>
 
 {{ partial "footer.html" . }} 
