--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -43,7 +43,7 @@
 			<a href="/tags/{{.}}" class="metatag p-category">{{.}}</a>&nbsp;&bull;&nbsp;
 		{{- end}}
 			<span rel="author" class="p-author h-card">
-				<a href="{{ .Site.BaseURL }}page/about" class="metatag" title="Daniel Goldsmith">	<svg class="icon">
+				<a href="{{ .Site.BaseURL }}" class="metatag" title="Daniel Goldsmith">	<svg class="icon"><title class="name">Daniel Goldsmith</title>
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
 						</use> 
 					</svg>
