--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -3,7 +3,7 @@
 		<a href="{{ .Permalink }}" class="metatag u-url u-uid"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05" }}">
 		{{- .Date.Format "02/01/06 15:04" }}</time></a>&nbsp;&bull;&nbsp;
 			<span rel="author" class="p-author h-card">
-				<a href="{{ .Site.BaseURL }}page/about" class="metatag" title="Daniel Goldsmith"><svg class="icon">
+				<a href="{{ .Site.BaseURL }}" class="metatag" title="Daniel Goldsmith"><title class="name">Daniel Goldsmith</title><svg class="icon">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-ascraeus">
 						</use> 
 					</svg>
