--- a/layouts/partials/p_microentry.html
+++ b/layouts/partials/p_microentry.html
@@ -3,7 +3,7 @@
 					<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-talk"></use>
 				</svg> replying to a post on <a href="{{ .Params.replyto }}" class="u-in-reply-to">{{ .Params.replysite }}</a></small>
 			{{- end }}
-		    <div class="e-content">
+		    <div class="e-content p-name">
 			{{- if isset .Params "photo" }}
 				<a href={{ delimit (index .Params "photo") ""}} >
 					<img src={{ delimit (index .Params "photo") ""}} class="u-photo" width="200" height="200">
