Working on indieweb checkin support

--- a/layouts/partials/p_microentry.html
+++ b/layouts/partials/p_microentry.html
@@ -3,6 +3,11 @@
 					<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-talk"></use>
 				</svg> replying to a post on <a href="{{ .Params.replyto }}" class="u-in-reply-to">{{ .Params.replysite }}</a></small>
 			{{- end }}
+			{{- if .Params.checkin }}
+			<small class="p-location h-card"><svg class="icon icon-location">
+					<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-location"></use>
+				</svg> at <a href="{{ .Params.checkurl }}" class="u-url p-name">{{ .Params.checkloc }}</a></small>
+			{{- end }}
 		    <div class="e-content p-name">
 			{{- if isset .Params "photo" }}
 				<a href={{ delimit (index .Params "photo") ""}} >
