--- a/layouts/partials/micrometadata.html
+++ b/layouts/partials/micrometadata.html
@@ -1,5 +1,8 @@
 {{"<!-- begin micrometadata partial //-->" | safeHTML}}
 <div class="meta">
+		{{- if .Params.checkin }}
+		<span class="p-location">{{ .Params.checkadd }}</span>
+		{{- end }}
 		<a href="{{ .Permalink }}" class="metatag u-url u-uid p-name"><time class="dt-published" datetime="{{ .Date.Format "2006-01-02 15:04:05" }}">
 		{{- .Date.Format "02/01/06 15:04" }}</time></a>&nbsp;&bull;&nbsp;
 			<span rel="author" class="p-author h-card">
@@ -37,6 +40,14 @@
 				<a href="{{ .Params.masto }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to mastodon">
 					<svg class="icon icon-masto">
 						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-masto">
+						</use>
+					</svg>
+				</a>&nbsp;&bull;&nbsp;
+			{{- end }}
+			{{- if .Params.checkin }}
+				<a href="{{ .Params.checkin }}" class="metatag u-syndication" rel="syndication" title="this post was syndicated to swarm">
+					<svg class="icon icon-swarm">
+						<use xlink:href="{{ .Site.BaseURL }}svg/symbol-defs.svg#icon-swarm">
 						</use>
 					</svg>
 				</a>&nbsp;&bull;&nbsp;
