--- a/layouts/section/micro.html
+++ b/layouts/section/micro.html
@@ -9,6 +9,9 @@
 		<div class="indmicro">
 			<article class="h-entry hentry">	
 		{{ partial "p_microentry.html" . }}
+	    {{- if .Params.checkin }}
+	    	<img src="{{ .Params.map" }}" class="map-image" height="240" width="600">
+	    {{- end }}
 	    {{ partial "micrometadata.html" . }}
 	    	</article>  
 	  	</div>
